feat: Enhanced MCP tool argument type system
- Add support for enum types with validation using Literal
- Add support for array types with multiple values
- Add support for object types with JSON string input
- Add comprehensive validation and error handling
- Display numeric constraints (min/max ranges) in help text
- Display string constraints in help text
- Updated example server to use FastMCP with proper annotations
- Improved CLI help text with clear parameter guidance
- Add support for Pydantic models with JSON Schema parsing
- Remove FastMCP banner for cleaner output

Version bump to 0.1.2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mcp2cli"
-version = "0.1.1"
+version = "0.1.2"
 description = "A command-line tool to interact with Model Context Protocol (MCP) servers."
 authors = [
   { name = "PsychArch", email = "psycharch@users.noreply.github.com" },
@@ -19,6 +19,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "fastmcp>=2.10.6",
     "mcp[cli]>=1.10.1",
     "rich>=14.0.0",
     "typer>=0.16.0",
